@@ -1,3 +1,10 @@
+2012-12-13  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/functions_api.php,
+	  include/functions_netflow.php,
+	  operation/netflow/nf_live_view.php: Further improved netflow
+	  performance.
+
 2012-12-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/functions_ui.php
